--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,8 @@
 kotlin.code.style=official
+kotlin.version=2.0.0
+multiple-inheritance-kt.version=1.0.0
+
+org.gradle.parallel=true
+org.gradle.caching=true
+
+detekt.version=1.23.1
