Add multiple-inheritance module and related classes
Introduced a new Gradle module for multiple inheritance. Added relevant classes and interfaces such as `Developer`, `Engineer`, and `OvertimeCapable`. Also moved existing classes to align with the new module structure.

--- a/.gitignore
+++ b/.gitignore
@@ -167,7 +167,7 @@ fabric.properties
 
 ### Gradle template
 **/build/
-!src/**/build/
+!multiple-inheritance/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
